<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center"
    android:foreground="?android:attr/selectableItemBackground"
    android:background="?android:selectableItemBackground">

    <ImageView
        android:src="@drawable/shopping_cart_128"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="25dp"
        android:padding="8dp"
        android:text="@string/application_name" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:textSize="16dp"
        android:textAlignment="center"
        android:text="@string/author" />

    <TextView
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:textAlignment="center"
        android:text="@string/source"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_marginTop="@dimen/fab_margin"
        android:textSize="20dp"
        android:textAlignment="center"
        android:text="@string/app_version" />
</LinearLayout>